# protobuf-python-rust

./: .gitignore  Makefile  Readme.md
protos/: message.proto
python_service/: client.py  requirements.txt  server.py
rust_service/: Cargo.toml  build.rs
rust_service/src/: client.rs  main.rs
